feat: Teach for Korea 랜딩페이지 구현
- Apple 스타일의 모던한 디자인 적용
- 봉사자 스토리 섹션 (랜덤 순서, 더 보기 기능)
- Google Forms 지원 링크 연동
- Discord 문의 링크 추가
- 로고 및 파비콘 적용
- 반응형 디자인 구현

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,14 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
